fix overflow issue

--- a/global.css
+++ b/global.css
@@ -3,5 +3,7 @@
 @tailwind utilities; 
 
 body {
+    overflow: scroll!important;
+    overflow-x: auto!important;
 overflow-y:scroll!important
 }
